# CppUniverse

./: .gitignore  README.md  run_djinni.sh
android_project/: .gitignore  build.gradle
android_project/app/: CMakeLists.txt  build.gradle
android_project/app/src/main/: AndroidManifest.xml
android_project/app/src/main/java/com/github/piasy/cpp_universe/: AndroidGuiWrapper.java  AndroidWindowManagerCallback.java  CppUniverse.java  MainActivity.java
android_project/app/src/main/java/com/github/piasy/helloworld/: MainActivity.java
android_project/app/src/main/jni/: cppuniverse_jni.cpp
android_project/app/src/main/res/layout/: activity_main.xml
android_project/app/src/main/res/values/: strings.xml
android_project/gradle/wrapper/: gradle-wrapper.properties
cpp_project/: Cakefile
cpp_project/CppUniverse/: main.cpp  mock_gui_wrapper.cpp  mock_gui_wrapper.hpp  mock_window_manager_callback.cpp  mock_window_manager_callback.hpp
cpp_project/HelloWorld/: main.cpp
djinni/: cpp_universe.djinni
ios_project/: Cakefile
ios_project/CppUniverse/: AppDelegate.h  AppDelegate.m  PCUiOSGuiWrapper.h  PCUiOSGuiWrapper.m  PCUiOSWindowManagerCallback.h  PCUiOSWindowManagerCallback.m  UIView+NSString.h  UIView+NSString.m  ViewController.h  ViewController.m  main.m
ios_project/HelloWorld/: ViewController.h  ViewController.m
src/cpp/: hello_world_impl.cpp  hello_world_impl.hpp  window.cpp  window.hpp  window_ext_impl.cpp  window_ext_impl.hpp  window_manager_impl.cpp  window_manager_impl.hpp
